# StrucTTY

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
example/: 1NPL-assembly1.cif  3A0C-assembly1.cif  3HGM-assembly1.cif  3OAG-assembly1.cif  8KGM-assembly1.cif  9FL9-assembly1.cif  9N47-assembly1.cif  AF-A0A233SAX3-F1-model_v6.cif  utfile_1npl_3a0c.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  structty.cpp
src/structure/: Parameters.cpp  Parameters.hpp  Protein.cpp  Protein.hpp  SSPredictor.cpp  SSPredictor.hpp  StructureMaker.cpp  StructureMaker.hpp
src/visualization/: Camera.cpp  Camera.hpp  Palette.hpp  Panel.cpp  Panel.hpp  RenderPoint.hpp  Screen.cpp  Screen.hpp
third_party_licenses/: zlib.txt
